src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AreaLookup__c</fullName>
        <label>AreaLookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>IF( Record_Type_Name__c = &quot;InternalOrganisation&quot;,
IF( CONTAINS(Name, &quot;Locality&quot;) , Parent.Name ,
IF(CONTAINS(Name,&quot;Area&quot;), Name,
IF(CONTAINS(Name, &quot;Local Service Office&quot;), Parent.Parent.Name, &quot;&quot;)
))
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_area_code__c</fullName>
        <label>Branch area code</label>
        <picklist>
            <picklistValues>
                <fullName>EAEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EALO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NISW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOYO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WECW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEWM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXXX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_cost_centre__c</fullName>
        <label>Branch cost centre</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COst_Centre__c</fullName>
        <description>For Alzheimers Organisational Units AS cost centre</description>
        <inlineHelpText>This is a five digit number</inlineHelpText>
        <label>Cost Centre</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category of External Organisation</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Statutory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Solicitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charity_Number__c</fullName>
        <label>Charity Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Commissioning_Group__c</fullName>
        <label>Clinical Commissioning Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <label>Company Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency_Derived__c</fullName>
        <description>Used on Record Types PWD and Carer to hold the Constituency derived from Postcode lookup.</description>
        <label>Postcode Constituency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Endowment__c</fullName>
        <label>Endowment</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Index__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External_Index</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Former_Branch_Name__c</fullName>
        <label>Former Branch Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <inlineHelpText>Funding Source - see the Finance Coding Structure on Arena.</inlineHelpText>
        <label>Funding Source</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Application_Website__c</fullName>
        <label>Grant Application Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HR_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>HR Advisor is set at the Area Level. HR Advisors may cover more than one Area, without covering an entire region.</inlineHelpText>
        <label>HR Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HRAdvisorArea</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Live_on_CRS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live on CRS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_authority__c</fullName>
        <label>Postcode Local Authority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality_Formula__c</fullName>
        <formula>IF( Record_Type_Name__c  = &quot;InternalOrganisation&quot;,  
       IF( CONTAINS(Name, &quot;Office&quot;) , 
              Parent.Name  , 
             IF(CONTAINS(Name,&quot;Locality&quot;), Name,&quot;&quot;))
     ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Locality Managers are set at the Locality level</inlineHelpText>
        <label>Locality Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LocalityManagerAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b70000000uUbk&amp;eid=&quot; &amp;Id, IMAGE( &quot;/resource/GoogleMaps&quot;, &quot;GoogleMaps&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Ratio__c</fullName>
        <label>Match Ratio</label>
        <picklist>
            <picklistValues>
                <fullName>1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Website__c</fullName>
        <label>Matching Gift Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Max_Match__c</fullName>
        <label>Max. Match</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Per_Employee__c</fullName>
        <label>Max. Per Employee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Match__c</fullName>
        <label>Min. Match</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_services__c</fullName>
        <label>Number of services</label>
        <summaryForeignKey>Account_Service_Connector__c.Organisation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Contact_Hours__c</fullName>
        <inlineHelpText>Please contact Charityshare via the portal if you you need to amend this information</inlineHelpText>
        <label>Office Contact Hours</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The operations director for a region. This field is only relevant for Accounts that are regions</description>
        <inlineHelpText>Enter the operations director. Leave blank for records that are not a Region</inlineHelpText>
        <label>Operations Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Region_Operations_Director</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Type__c</fullName>
        <label>Other Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_care_trust__c</fullName>
        <label>Postcode Primary Care Trust</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrering_Organisation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referring Organisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Alztrading__c</fullName>
        <description>Region</description>
        <label>Country/Region</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF( Record_Type_Name__c = &quot;InternalOrganisation&quot;,
IF( CONTAINS(Name, &quot;Area&quot;) , Parent.Name , IF(CONTAINS(Name,&quot;Region&quot;),
Name,
IF (CONTAINS(Name,&quot;Locality&quot;), Parent.Parent.Name,
IF (CONTAINS(Name,&quot;Local Service Office&quot;), Parent.Parent.Parent.Name, &quot;&quot;)
)))
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Accountant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The regional account. Blank for any organisations that are not regions</description>
        <inlineHelpText>The name of the regional account. Leave blank for organisations that are not Regions.</inlineHelpText>
        <label>Regional Accountant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_Accountant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ROM set regional level</inlineHelpText>
        <label>Regional Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The SIM is set at the Region level</inlineHelpText>
        <label>SIM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SimAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Website__c</fullName>
        <label>Site_Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Typical_Grant_Size__c</fullName>
        <label>Typical Grant Size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Dementia_Connect_widget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Dementia Connect widget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <label>Postcode Ward</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_Give_To__c</fullName>
        <label>Will Give To</label>
        <picklist>
            <picklistValues>
                <fullName>Arts, Culture, and Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment and Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International, Foreign Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual/Membership Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public, Societal Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religion Related</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zzdelArea__c</fullName>
        <label>zzdelArea DO NOT USE</label>
        <picklist>
            <controllingField>Region_Alztrading__c</controllingField>
            <picklistValues>
                <fullName>East Anglia and Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North and East Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South and West Northern Ireland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All_Alzheimer_s_Trading_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Alzheimer_s_Trading_Ltd_Accounts</value>
        </filters>
        <label>All Alzheimer&apos;s Trading Accounts</label>
        <sharedTo>
            <group>AlzheimersTradingLtdOfficeGroup185171</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_External_Organisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Category__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.External_organisation</value>
        </filters>
        <label>All External Organisations</label>
    </listViews>
    <listViews>
        <fullName>All_Internal_Organisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Locality_Formula__c</columns>
        <columns>Area__c</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.InternalOrganisation</value>
        </filters>
        <label>All Internal Organisations</label>
    </listViews>
    <listViews>
        <fullName>All_Organisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Record_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Organisations</label>
    </listViews>
    <recordTypes>
        <fullName>ASOrganisation</fullName>
        <active>true</active>
        <description>Use this record type for AS organisational units, local services, area, region, directorate etc</description>
        <label>AS Organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Alzheimer_s_Trading_Ltd_Accounts</fullName>
        <active>true</active>
        <label>Alzheimer&apos;s Trading Ltd Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>Use this record type for corporations or small businesses</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>DA_Organisation</fullName>
        <active>true</active>
        <label>DA Organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_organisation</fullName>
        <active>true</active>
        <description>Use this for non Alzheimer&apos;s Society organisations</description>
        <label>External organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <description>Use this record type for foundation entities</description>
        <label>Foundation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <description>Use this record type for government agencies (federal, local or state)</description>
        <label>Government</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>Represents a single contact record</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>InternalOrganisation</fullName>
        <active>true</active>
        <description>Use this record type for AS organisational units, local services, area, region, directorate etc</description>
        <label>Internal Organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nonprofit</fullName>
        <active>true</active>
        <description>Use this record type for nonprofit entities</description>
        <label>Nonprofit</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCT_Health</fullName>
        <active>true</active>
        <label>PCT / Health</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>